Update 'go-ydfufngw' component image to: quay.io/rhtap_qe/go-ydfufngw:3cc4b2cca259277c3d08234cd3b6443933b3d61f@sha256:7b5b0a9469b89357db8f797bb059097aa5af340be74f37bd6557e73cd9968f4e

--- a/components/go-ydfufngw/overlays/development/deployment-patch.yaml
+++ b/components/go-ydfufngw/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: go-ydfufngw
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/go-ydfufngw:3cc4b2cca259277c3d08234cd3b6443933b3d61f@sha256:7b5b0a9469b89357db8f797bb059097aa5af340be74f37bd6557e73cd9968f4e
+          name: container-image
